_sass/_intro.scss
.intro {
  @include section();
  @include for-tablet-portrait-up {
    padding: 1em;
  }
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-flow: column wrap;
  align-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: $brand-color-4;

  * {
    text-align: center;
  }
}

.intro__selfie {
  // width: 5em;
  height: 10em;
  // background: url('/assets/eric_dauenhauer.jpg') 50px 0px no-repeat;
  // clip-path: circle(40%);
  clip-path: url(#intro__selfieClip);
  margin: -5em auto 0 auto;
}

.intro__caption {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  max-width: 320px;
  font-size: 0.75em;
  color: $brand-color-4__font;
}

.intro__hero {
  font-size: 3em;
  padding-top: 0;
  margin-top: 0;
  color: $brand-color-4__font;
}

.intro__more-arrow {
  margin-top: 2em;
  transform: rotate(90deg);

  svg {
    width: 4em;
    height: 4em;
  }
}

